# DLA

./: .gitlab-ci-env.sh  .gitlab-ci.yml  .gitmodules  AUTOCOMPLETE.org  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.org  CTestConfig.cmake  ChangeLog  INSTALL.org  INSTALL.txt  LICENCE.txt  README-dev.md  README-dev.org  README.md  README.org  READMEDEV.org  sonar-project.properties
compute/: CMakeLists.txt  pzbuild.c  pzgeadd.c  pzgebrd_ge2gb.c  pzgelqf.c  pzgelqf_param.c  pzgelqfrh.c  pzgemm.c  pzgeqrf.c  pzgeqrf_param.c  pzgeqrfhqr.c  pzgeqrfrh.c  pzgetrf_incpiv.c  pzgetrf_nopiv.c  pzhemm.c  pzher2k.c  pzherk.c  pzhetrd_he2hb.c  pzlacpy.c  pzlag2c.c  pzlange.c  pzlanhe.c  pzlansy.c  pzlantr.c  pzlascal.c  pzlaset.c  pzlaset2.c  pzlauum.c  pzplghe.c  pzplghe2.c  pzplgsy.c  pzplgsy2.c  pzplrnt.c  pzpotrf.c  pzpotrimm.c  pzsymm.c  pzsyr2k.c  pzsyrk.c  pzsytrf.c  pztile.c  (+85 more)
control/: CMakeLists.txt  async.c  async.h  auxiliary.c  auxiliary.h  bulge.h  common.h  compute_z.h  config.h.in  context.c  context.h  control.c  descriptor.c  descriptor.h  gkkleader.h  global.h  morse_f77.c  morse_f77.h  morse_f90.f90  morse_mf77.c  morse_zcf90.F90  morse_zf77.c  morse_zf90.F90  morse_zf90_wrappers.F90  morsewinthread.c  morsewinthread.h  primes.h  tile.c  tile.h  workspace.c  workspace.h  workspace_z.c
coreblas/: CMakeLists.txt
coreblas/compute/: CMakeLists.txt  core_dzasum.c  core_zaxpy.c  core_zgeadd.c  core_zgelqt.c  core_zgemm.c  core_zgeqrt.c  core_zgesplit.c  core_zgessm.c  core_zgessq.c  core_zgetf2_nopiv.c  core_zgetrf.c  core_zgetrf_incpiv.c  core_zgetrf_nopiv.c  core_zhe2ge.c  core_zhemm.c  core_zher2k.c  core_zherfb.c  core_zherk.c  core_zhessq.c  core_zlacpy.c  core_zlag2c.c  core_zlange.c  core_zlanhe.c  core_zlansy.c  core_zlantr.c  core_zlascal.c  core_zlaset.c  core_zlaset2.c  core_zlatro.c  core_zlauum.c  core_zpamm.c  core_zparfb.c  core_zpemv.c  core_zplghe.c  core_zplgsy.c  core_zplrnt.c  core_zpotrf.c  core_zssssm.c  core_zsymm.c  (+28 more)
coreblas/eztrace_module/: CMakeLists.txt  coreblas_eztrace_module
coreblas/include/: CMakeLists.txt  cblas.h  coreblas.h  coreblas_z.h  coreblas_zc.h  lapacke.h  lapacke_config.h  lapacke_mangling.h
cudablas/compute/: CMakeLists.txt  cuda_zgeadd.c  cuda_zgelqt.c  cuda_zgemerge.c  cuda_zgemm.c  cuda_zgeqrt.c  cuda_zgessm.c  cuda_zgetrf.c  cuda_zhemm.c  cuda_zher2k.c  cuda_zherfb.c  cuda_zherk.c  cuda_zlarfb.c  cuda_zlauum.c  cuda_zparfb.c  cuda_zpotrf.c  cuda_zssssm.c  cuda_zsymm.c  cuda_zsyr2k.c  cuda_zsyrk.c  cuda_ztpmqrt.c  cuda_ztrmm.c  cuda_ztrsm.c  cuda_ztrtri.c  cuda_ztslqt.c  cuda_ztsmlq.c  cuda_ztsmqr.c  cuda_ztsqrt.c  cuda_ztstrf.c  cuda_zttmqr.c  cuda_zunmlqt.c  cuda_zunmqrt.c  cudaglobal.c
cudablas/include/: CMakeLists.txt  cudablas.h  cudablas_z.h
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  conf-dev-quark.dox.in  conf-dev-starpu.dox.in  conf-usr-quark.dox.in  conf-usr-starpu.dox.in
docs/texinfo/: CMakeLists.txt  users_guide.texi.in  version.texi.in
example/: CMakeLists.txt
example/basic_zposv/: CMakeLists.txt  CTestLists.cmake  basic_posv.h  posv_morse_functions.h  posv_users_functions.h  zposv_morse_functions.c  zposv_users_functions.c
example/lapack_to_morse/: CMakeLists.txt  CTestLists.cmake  lapack_to_morse.h  step0.c  step0.h  step1.c  step1.h  step2.c  step2.h  step3.c  step3.h  step4.c  step4.h  step5.c  step5.h  step6.c  step6.h  step7.c  step7.h
example/link_chameleon/: CMakeLists.txt  README.org  link_chameleon.c
example/out_of_core/: CMakeLists.txt  CTestLists.cmake  out_of_core.c  out_of_core.h
eztrace_modules/cblas/: CMakeLists.txt  cblas_eztrace_module
eztrace_modules/lapacke/: CMakeLists.txt  lapacke_eztrace_module
include/: CMakeLists.txt  chameleon_config.h.in  morse.h  morse.h.in  morse_config.h.in  morse_constants.h  morse_fortran.h  morse_kernels.h  morse_simulate.h  morse_struct.h  morse_types.h  morse_z.h  runtime.h  runtime_z.h  runtime_zc.h
include/chameleon/: chameleon_config.h.in  chameleon_timer.h  morse_constants.h  morse_fortran.h  morse_kernels.h  morse_runtime.h  morse_simulate.h  morse_struct.h  morse_tasks.h  morse_tasks_z.h  morse_tasks_zc.h  morse_types.h  morse_z.h  morse_zc.h  runtime.h  runtime_zc.h
new_magmamorse/control/: CMakeLists.txt  async.h  auxiliary.h  context.c  control.c  global.h  morse_f90.f90  morse_mf77.c  morse_zf77.c  morse_zf90.F90  morse_zf90_wrappers.F90  morsewinthread.c  morsewinthread.h  primes.h  tile.h  workspace.h  workspace_z.c
runtime/: CMakeLists.txt
runtime/parsec/: CMakeLists.txt
runtime/quark/: CMakeLists.txt
runtime/starpu/: CMakeLists.txt
simucore/: CMakeLists.txt
simucore/simucblas/: CMakeLists.txt  cblas.h  simucblas.c
simucore/simulapacke/: CMakeLists.txt  lapacke.h  lapacke_config.h  (+1 more)
testing/: CMakeLists.txt  CTestLists.cmake  testing_zauxiliary.c  testing_zauxiliary.h  testing_zgeadd.c  testing_zgels.c  testing_zgels_hqr.c  testing_zgels_param.c  testing_zgels_systolic.c  testing_zgemm.c  testing_zgeqrf_param.c  testing_zgeqrf_qdwh.c  testing_zgeqrfhqr_qdwh.c  testing_zgesv_incpiv.c  testing_zgesvd.c  testing_zheevd.c  testing_zhemm.c  testing_zher2k.c  testing_zherk.c  testing_zlange.c  testing_zpemv.c  testing_zposv.c  testing_zpotri.c  testing_zsymm.c  testing_zsyr2k.c  testing_zsyrk.c  testing_ztrmm.c  testing_ztrsm.c
timing/: CMakeLists.txt  CTestLists.cmake  auxiliary.c  auxiliary.h  flops.h  time_zgelqf.c  time_zgelqf_tile.c  time_zgels.c  time_zgels_tile.c  time_zgemm.c  time_zgemm_tile.c  time_zgeqrf.c  time_zgeqrf_hqr.c  time_zgeqrf_hqr_tile.c  time_zgeqrf_lapacke.c  time_zgeqrf_tile.c  time_zgeqrs_tile.c  time_zgesv_incpiv.c  time_zgesv_incpiv_tile.c  time_zgesv_nopiv.c  time_zgesv_nopiv_tile.c  time_zgesvd_tile.c  time_zgetrf_incpiv.c  time_zgetrf_incpiv_tile.c  time_zgetrf_nopiv.c  time_zgetrf_nopiv_tile.c  time_zgetri_tile.c  time_zgetrs_incpiv_tile.c  time_zgetrs_nopiv_tile.c  time_zheevd_tile.c  time_zlange.c  time_zlange_tile.c  time_zposv.c  time_zposv_tile.c  time_zpotrf.c  time_zpotrf_tile.c  time_zpotri_tile.c  time_zpotrs_tile.c  time_zsytrf_tile.c  time_ztrsm.c  (+6 more)
(+552 files in other folders)
